Test/dafny0/BitvectorResolution.dfy.expect
BitvectorResolution.dfy(9,13): Error: bitvector literal (5000) is too large for the type bv1
BitvectorResolution.dfy(15,9): Error: bitvector literal (1) is too large for the type bv0
BitvectorResolution.dfy(18,9): Error: bitvector literal (4294967296) is too large for the type bv32
3 resolution/type errors detected in BitvectorResolution.dfy
